--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "cms-preview": "astro dev --port 8080"
   },
   "devDependencies": {
     "astro": "^1.0.0-beta.17",
