--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "accessible-astro-components": "^1.4.7",
     "astro": "^1.0.0-beta.27",
     "marked": "^4.0.15",
+    "@rollup/plugin-yaml": "^3.1.0",
     "sass": "1.51.0"
   },
   "keywords": [],
