--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -5,7 +5,7 @@ admin_path: public/admin
 webhook_url: 
 sections:
 - type: document
-  path: src/data/Meta.md
+  path: src/data/Settings.md
   label: Site Info
 - type: document
   path: src/content/Reel.md
