--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "aiello-website",
   "version": "0.0.1",
   "private": true,
+  "keywords": [],
+  "description": "",
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev --host",
@@ -10,12 +12,14 @@
     "cms-preview": "astro dev --port 8080"
   },
   "devDependencies": {
+    "@astrojs/svelte": "^0.2.0",
     "@rollup/plugin-yaml": "^3.1.0",
     "accessible-astro-components": "^1.4.7",
-    "astro": "^1.0.0-beta.40",
+    "astro": "^1.0.0-beta.64",
     "marked": "^4.0.15",
     "sass": "1.51.0"
   },
-  "keywords": [],
-  "description": ""
+  "dependencies": {
+    "svelte": "^3.49.0"
+  }
 }
