--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bigger-picture": "^1.1.1",
+    "probe-image-size": "^7.2.3",
     "svelte": "^3.49.0",
     "svelte-accessible-dialog": "^2.1.3"
   }
