--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-yaml": "^3.1.0",
     "accessible-astro-components": "^1.4.7",
     "astro": "^1.0.0-beta.64",
+    "fast-average-color-node": "^2.4.0",
     "marked": "^4.0.15",
     "probe-image-size": "^7.2.3",
     "sass": "1.51.0"
