--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/svelte": "^0.2.0",
     "@rollup/plugin-yaml": "^3.1.0",
     "accessible-astro-components": "^1.4.7",
-    "astro": "^1.0.0-beta.64",
+    "astro": "1.0.0-beta.64",
     "fast-average-color-node": "^2.4.0",
     "marked": "^4.0.15",
     "probe-image-size": "^7.2.3",
