--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/svelte": "^0.2.0",
     "@rollup/plugin-yaml": "^3.1.0",
     "accessible-astro-components": "^1.4.7",
-    "astro": "^1.0.0-beta.64",
+    "astro": "1.0.0-beta.64",
     "marked": "^4.0.15",
     "sass": "1.51.0"
   },
