--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@rollup/plugin-yaml": "^3.1.0",
     "accessible-astro-components": "^1.4.7",
     "astro": "1.0.0-beta.64",
+    "eslint": "^9.7.0",
+    "eslint-plugin-astro": "^1.2.3",
     "fast-average-color-node": "^2.4.0",
     "marked": "^4.0.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.0",
     "probe-image-size": "^7.2.3",
     "sass": "1.51.0"
   },
