--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "accessible-astro-components": "^1.4.7",
     "astro": "1.0.0-beta.64",
     "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
     "fast-average-color-node": "^2.4.0",
     "marked": "^4.0.15",
