--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
-    "cms-preview": "astro dev --port 8080"
+    "cms-preview": "astro dev --port 8080",
+    "prepare": "husky && husky install"
   },
   "devDependencies": {
     "@astrojs/svelte": "^0.2.0",
@@ -19,6 +20,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
     "fast-average-color-node": "^2.4.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "marked": "^4.0.15",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.0",
@@ -29,5 +32,14 @@
     "bigger-picture": "^1.1.1",
     "svelte": "^3.49.0",
     "svelte-accessible-dialog": "^2.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{astro,js,svelte}": "eslint --cache --fix",
+    "*.{astro,css,htm,html,js,md,svelte}": "prettier --write"
   }
 }
