--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.3",
+    "eslint-plugin-svelte": "^2.42.0",
     "fast-average-color-node": "^2.4.0",
+    "globals": "^15.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "marked": "^4.0.15",
