--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-svelte": "^3.2.6",
     "probe-image-size": "^7.2.3",
-    "sass": "1.51.0"
+    "sass": "1.51.0",
+    "svelte-preprocess": "^6.0.2"
   },
   "dependencies": {
     "bigger-picture": "^1.1.1",
