wip: add Sanity integration

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "private": true,
   "keywords": [],
-  "description": "Portfolio website of Andrew Aiello built using Astro, Svelte, Cloudinary image hosting, Netlify deployment, and Forestry CMS.",
+  "description": "Portfolio website of Andrew Aiello built using Astro, Svelte, Cloudinary image hosting, Netlify deployment, and Sanity CMS.",
   "scripts": {
     "dev": "astro dev --host",
     "build": "astro build",
@@ -33,7 +33,13 @@
     "svelte-preprocess": "^6.0.2"
   },
   "dependencies": {
+    "@sanity/astro": "^3.1.6",
+    "@sanity/client": "^6.22.4",
+    "@sanity/visual-editing": "^2.7.0",
     "bigger-picture": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sanity": "^3.64.1",
     "svelte": "^4.0.0",
     "svelte-accessible-dialog": "^2.1.3"
   },
