--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@sanity/client": "^6.22.4",
     "bigger-picture": "^1.1.1",
     "sanity": "^3.64.1",
-    "svelte": "^4.0.0",
-    "svelte-accessible-dialog": "^2.1.3"
+    "svelte": "^4.0.0"
   },
   "husky": {
     "hooks": {
